--- a/src/app/page_users/basic-english/basic-english.component.html
+++ b/src/app/page_users/basic-english/basic-english.component.html
@@ -1,45 +1,4 @@
 <body>
-  <!-- ======= Header ======= -->
-  <!-- <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
-
-      <h1 class="logo me-auto">
-        <a href="index.html">
-          <img  src="../../../assets/img/logo-trung-tam-hsk.png" alt="">
-        </a></h1>
-      <a href="index.html" class="logo me-auto"><img src="../../../assets/img/img/logo.png" alt="" class="img-fluid"></a>
-
-      <nav id="navbar" class="navbar order-last order-lg-0">
-        <ul>
-          <li><a routerLink="/home-user">Trang chủ</a></li>
-          <li><a routerLink="/about">Giới thiệu</a></li>
-          <li class="dropdown"><a routerLink="/child-english"><span>Chương trình học</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/child-english">Tiếng Anh thiếu nhi</a></li>
-              <li><a routerLink="/young-english">Tiếng Anh thiếu niên</a></li>
-              <li><a routerLink="/ielts">Luyện thi IELTS</a></li>
-              <li><a routerLink="/toiec">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
-              <li><a routerLink="/basic-english">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a routerLink="/child-schedule"><span>Lịch Khai Giảng</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/child-schedule">Tiếng Anh thiếu nhi</a></li>
-              <li><a routerLink="/young-schedule">Tiếng Anh thiếu niên</a></li>
-              <li><a routerLink="/ielts-schedule">Luyện thi IELTS</a></li>
-              <li><a routerLink="/toiec-schedule">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
-              <li><a routerLink="/basic-schedule">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
-            </ul>
-          </li>
-          <li><a routerLink="/contact">Liên hệ</a></li>
-          <li><a *ngIf="!loggedIn" routerLink="/login-user">Đăng nhập</a></li>
-          <li><a *ngIf="loggedIn" (click)="handleLogout()">Đăng xuất</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>
-    </div>
-  </header> -->
-  <!-- End Header -->
   <app-navbar-user></app-navbar-user>
   <!-- ======= Hero Section ======= -->
   <section id="hero-child"  class="d-flex justify-content-center align-items-center">
@@ -78,7 +37,7 @@
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+              <img src="https://ebooks.edu.vn/wp-content/uploads/2015/06/lop-hoc-tieng-anh-2.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>CE1 – Elementary</h4>
                 <span>– Đối tượng: Phù hợp với đối tượng là người đi làm, học sinh – sinh viên có nhu cầu học giao tiếp, muốn cải thiện kỹ năng giao tiếp tiếng Anh</span>
@@ -90,7 +49,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+              <img src="https://ebooks.edu.vn/wp-content/uploads/2015/06/lop-hoc-tieng-anh-2.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>CE2 – Pre-intermediate</h4>
                 <span>– Đối tượng: Phù hợp với đối tượng là người đi làm, học sinh – sinh viên muốn nâng cao khả năng giao tiếp, phản xạ linh hoạt.</span>
@@ -102,7 +61,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+              <img src="https://ebooks.edu.vn/wp-content/uploads/2015/06/lop-hoc-tieng-anh-2.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>CE3 – Intermediate và CE4 – Upper intermediate</h4>
                 <span>– Đối tượng: Phù hợp với đối tượng là người đi làm, học sinh – sinh viên muốn nâng cao khả năng giao tiếp, phản xạ linh hoạt.</span>
