--- a/src/app/page_users/ielts/ielts.component.html
+++ b/src/app/page_users/ielts/ielts.component.html
@@ -1,45 +1,4 @@
 <body>
-  <!-- ======= Header ======= -->
-  <!-- <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
-
-      <h1 class="logo me-auto">
-        <a href="index.html">
-          <img  src="../../../assets/img/logo-trung-tam-hsk.png" alt="">
-        </a></h1>
-      <a href="index.html" class="logo me-auto"><img src="../../../assets/img/img/logo.png" alt="" class="img-fluid"></a>
-
-      <nav id="navbar" class="navbar order-last order-lg-0">
-        <ul>
-          <li><a routerLink="/home-user">Trang chủ</a></li>
-          <li><a routerLink="/about">Giới thiệu</a></li>
-          <li class="dropdown"><a routerLink="/child-english"><span>Chương trình học</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/child-english">Tiếng Anh thiếu nhi</a></li>
-              <li><a routerLink="/young-english">Tiếng Anh thiếu niên</a></li>
-              <li><a routerLink="/ielts">Luyện thi IELTS</a></li>
-              <li><a routerLink="/toiec">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
-              <li><a routerLink="/basic-english">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a routerLink="/child-schedule"><span>Lịch Khai Giảng</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/child-schedule">Tiếng Anh thiếu nhi</a></li>
-              <li><a routerLink="/young-schedule">Tiếng Anh thiếu niên</a></li>
-              <li><a routerLink="/ielts-schedule">Luyện thi IELTS</a></li>
-              <li><a routerLink="/toiec-schedule">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
-              <li><a routerLink="/basic-schedule">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
-            </ul>
-          </li>
-          <li><a routerLink="/contact">Liên hệ</a></li>
-          <li><a *ngIf="!loggedIn" routerLink="/login-user">Đăng nhập</a></li>
-          <li><a *ngIf="loggedIn" (click)="handleLogout()">Đăng xuất</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>
-    </div>
-  </header> -->
-  <!-- End Header -->
   <app-navbar-user></app-navbar-user>
 
   <!-- ======= Hero Section ======= -->
@@ -60,7 +19,7 @@
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+              <img src="https://vcdn-vnexpress.vnecdn.net/2017/04/05/huong-dan-hoc-thi-ielts-cho-ng-3909-3571-1491385539.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>PreIELTS</h4>
                 <span>– Đối tượng: Dành cho Học viên từ 15 tuổi trở lên, Học viên mới bắt đầu học IELTS hoặc trình độ tương đương 2.0 – 2.5 IELTS.</span>
@@ -74,7 +33,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+              <img src="https://vcdn-vnexpress.vnecdn.net/2017/04/05/huong-dan-hoc-thi-ielts-cho-ng-3909-3571-1491385539.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>IELTS 4.0</h4>
                 <span>– Đối tượng: Dành cho Học viên từ 15 tuổi trở lên, Học viên có trình độ tương đương 3.0 IELTS.</span>
@@ -91,7 +50,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+              <img src="https://vcdn-vnexpress.vnecdn.net/2017/04/05/huong-dan-hoc-thi-ielts-cho-ng-3909-3571-1491385539.jpg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>IELTS 5.0</h4>
                 <span>– Đối tượng: Dành cho Học viên từ 15 tuổi trở lên, Học viên đã học qua IELTS và có trình độ tương đương 4.0 – 4.5 IELTS</span>
@@ -116,7 +75,7 @@
             <div class="row" data-aos="zoom-in" data-aos-delay="100">
               <div class=" col-md-6 d-flex align-items-stretch">
                 <div class="member">
-                  <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+                  <img src="https://vcdn-vnexpress.vnecdn.net/2017/04/05/huong-dan-hoc-thi-ielts-cho-ng-3909-3571-1491385539.jpg" class="img-fluid" alt="">
                   <div class="member-content">
                     <h4>IELTS 5.5</h4>
                     <span>– Đối tượng: Dành cho Học viên từ 15 tuổi trở lên, Học viên đã học qua IELTS và có trình độ tương đương 5.0, cần chú trọng luyện giải đề & tham gia thi chứng chỉ quốc tế.</span>
@@ -130,7 +89,7 @@
 
               <div class=" col-md-6 d-flex align-items-stretch">
                 <div class="member">
-                  <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+                  <img src="https://vcdn-vnexpress.vnecdn.net/2017/04/05/huong-dan-hoc-thi-ielts-cho-ng-3909-3571-1491385539.jpg" class="img-fluid" alt="">
                   <div class="member-content">
                     <h4>IELTS > 6.0</h4>
                     <span>– Đối tượng: Dành cho Học viên từ 15 tuổi trở lên, Học viên đã học qua IELTS và có trình độ tương đương 5.5, cần chú trọng luyện giải đề & tham gia thi chứng chỉ quốc tế.</span>
