--- a/src/app/page_users/toiec/toiec.component.html
+++ b/src/app/page_users/toiec/toiec.component.html
@@ -1,45 +1,4 @@
 <body>
-  <!-- ======= Header ======= -->
-  <!-- <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
-
-      <h1 class="logo me-auto">
-        <a href="index.html">
-          <img  src="../../../assets/img/logo-trung-tam-hsk.png" alt="">
-        </a></h1>
-      <a href="index.html" class="logo me-auto"><img src="../../../assets/img/img/logo.png" alt="" class="img-fluid"></a>
-
-      <nav id="navbar" class="navbar order-last order-lg-0">
-        <ul>
-          <li><a routerLink="/home-user">Trang chủ</a></li>
-          <li><a routerLink="/about">Giới thiệu</a></li>
-          <li class="dropdown"><a routerLink="/child-english"><span>Chương trình học</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/child-english">Tiếng Anh thiếu nhi</a></li>
-              <li><a routerLink="/young-english">Tiếng Anh thiếu niên</a></li>
-              <li><a routerLink="/ielts">Luyện thi IELTS</a></li>
-              <li><a routerLink="/toiec">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
-              <li><a routerLink="/basic-english">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
-            </ul>
-          </li>
-          <li class="dropdown"><a routerLink="/child-schedule"><span>Lịch Khai Giảng</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a routerLink="/child-schedule">Tiếng Anh thiếu nhi</a></li>
-              <li><a routerLink="/young-schedule">Tiếng Anh thiếu niên</a></li>
-              <li><a routerLink="/ielts-schedule">Luyện thi IELTS</a></li>
-              <li><a routerLink="/toiec-schedule">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
-              <li><a routerLink="/basic-schedule">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
-            </ul>
-          </li>
-          <li><a routerLink="/contact">Liên hệ</a></li>
-          <li><a *ngIf="!loggedIn" routerLink="/login-user">Đăng nhập</a></li>
-          <li><a *ngIf="loggedIn" (click)="handleLogout()">Đăng xuất</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>
-    </div>
-  </header> -->
-  <!-- End Header -->
   <app-navbar-user></app-navbar-user>
 
   <!-- ======= Hero Section ======= -->
@@ -58,7 +17,7 @@
         <div class="row" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+              <img src="https://i.ytimg.com/vi/POGpjfyPJsY/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLD-0TSdfeGPeP_kFxjT6W01TaavNA" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>TOEFL iBT</h4>
                 <span>Chương trình luyện thi chứng chỉ TOEFL iBT </span>
@@ -69,7 +28,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+              <img src="https://i.ytimg.com/vi/POGpjfyPJsY/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLD-0TSdfeGPeP_kFxjT6W01TaavNA" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>TOEIC</h4>
                 <span>Chương trình luyện thi chứng chỉ Quốc tế TOEIC</span>
@@ -80,7 +39,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="https://img.freepik.com/free-photo/kids-classroom-taking-english-class_23-2149402680.jpg?size=626&ext=jpg&ga=GA1.1.186812330.1694421726&semt=ais" class="img-fluid" alt="">
+              <img src="https://i.ytimg.com/vi/POGpjfyPJsY/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLD-0TSdfeGPeP_kFxjT6W01TaavNA" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>SAT/SSAT</h4>
                 <span>Chương trình luyện thi chứng chỉ SAT/SSAT</span>
