--- a/src/app/pages/add-teacher/add-teacher.component.html
+++ b/src/app/pages/add-teacher/add-teacher.component.html
@@ -5,7 +5,7 @@
   <main>
 
       <div class="page-header">
-        <h3>Thêm khóa học</h3>
+        <h3>Thêm giảng viên</h3>
       </div>
 
       <div class="page-content">
