--- a/src/app/pages/child-english-ad-list/child-english-ad-list.component.html
+++ b/src/app/pages/child-english-ad-list/child-english-ad-list.component.html
@@ -4,7 +4,7 @@
 
   <main>
     <div class="page-header">
-      <h3>Danh sách đăng ký chương trình Tiếng Anh thiếu nhi</h3>
+      <h3>Danh sách đăng ký chương trình</h3>
     </div>
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
