--- a/src/app/pages/ielts-english-ad/ielts-english-ad.component.html
+++ b/src/app/pages/ielts-english-ad/ielts-english-ad.component.html
@@ -54,19 +54,19 @@
 
               <div class="record-header">
                   <div class="add">
-                      <span>Entries</span>
+                      <!-- <span>Entries</span>
                       <select name="" id="">
                           <option value="">ID</option>
-                      </select>
+                      </select> -->
                      <a  routerLink="/add-ielts"><button>Thêm</button></a>
                   </div>
 
-                  <div class="browse">
+                  <!-- <div class="browse">
                      <input type="search" placeholder="Search" class="record-search">
                       <select name="" id="">
                           <option value="">Status</option>
                       </select>
-                  </div>
+                  </div> -->
               </div>
 
               <div>
