--- a/src/app/pages/manager-quiz/manager-quiz.component.html
+++ b/src/app/pages/manager-quiz/manager-quiz.component.html
@@ -5,7 +5,7 @@
   <main>
 
       <div class="page-header">
-          <h1>Quản lý kết quả học tập các học viên</h1>
+          <h1>Quản lý câu hỏi</h1>
           <!-- <small>Home / Dashboard</small> -->
       </div>
       <nav id="navbar" class="navbar order-last order-lg-0">
