--- a/src/app/pages/add-exam-course/add-exam-course.component.html
+++ b/src/app/pages/add-exam-course/add-exam-course.component.html
@@ -5,7 +5,7 @@
   <main>
 
       <div class="page-header">
-        <h3>Thêm khóa học</h3>
+        <h3>Thêm bài thi</h3>
       </div>
 
       <div class="page-content">
