--- a/src/app/pages/add-timetable/add-timetable.component.html
+++ b/src/app/pages/add-timetable/add-timetable.component.html
@@ -5,7 +5,7 @@
   <main>
 
       <div class="page-header">
-        <h3>Thêm khóa học</h3>
+        <h3>Xếp thời khóa biểu</h3>
       </div>
 
       <div class="page-content">
