--- a/src/app/pages/update-teacher/update-teacher.component.html
+++ b/src/app/pages/update-teacher/update-teacher.component.html
@@ -5,7 +5,7 @@
   <main>
 
       <div class="page-header">
-        <h3>Thêm khóa học</h3>
+        <h3>Cập nhật thông tin giảng viên</h3>
       </div>
 
       <div class="page-content">
@@ -60,7 +60,7 @@
                   <td>
                     <input type="text" [(ngModel)]="teacher.teachProgram" name="teachProgram" id="teachProgram" >
                   </td>
-                <td><button  type="submit">Thêm</button></td>
+                <td><button  type="submit">Cập nhật</button></td>
               </div>
             </table>
             </div>
