--- a/src/app/pages/update-course/update-course.component.html
+++ b/src/app/pages/update-course/update-course.component.html
@@ -5,71 +5,95 @@
   <main>
 
       <div class="page-header">
-        <h3>Sửa khóa học</h3>
+        <h3>Cập nhật khóa học</h3>
       </div>
 
       <div class="page-content">
 
           <div class="records table-responsive">
             <form (ngSubmit)="onSubmit()">
-                          <div class="record-header">
-                              <div class="add">
-                                <table>
-                                  <div  class="td_select">
-                                  <td><span>Chương trình</span></td>
-                                    <td>
-                                      <input type="text" [(ngModel)]="courses.program" name="program" id="program" >
-                                    </td>
-                                  <td><span>Cấp độ</span></td>
-                                  <td><input type="text" [(ngModel)]="courses.level" name="level" id="level" >
-                                  </td>
-                                  <td><span>Học phí</span></td>
-                                  <td>
-                                    <input type="text" [(ngModel)]="courses.price" name="price" id="price" >
-                                  </td>
-                                </div>
-                                </table>
-                              </div>
-                          </div>
-                          <div class="record-header">
-                            <div class="add">
-                              <table>
-                                <div  class="td_select">
-                              <td><span>Lịch học</span></td>
-                              <td><input type="text" [(ngModel)]="courses.schedule" name="schedule" id="schedule" >
-                              </td>
+              <div class="record-header">
+                <div class="add">
+                  <table>
+                    <div  class="td_select">
+                      <tr style="height: 70px;">
+                        <td><span>Chương trình học</span></td>
+                        <td>
+                          <!-- <input type="text" [(ngModel)]="courses.program" name="program" id="program" > -->
+                          <select  [(ngModel)]="courses.id" name="id" id="id" class="form-select" aria-label="Default select example" required>
+                            <!-- <option value="1" disabled >-- Chọn khóa học --</option> -->
+                            <option value="1">Tiếng Anh thiếu nhi</option>
 
-                              <td><span>Ngày khai giảng dự kiến</span></td>
-                              <td>
-                                <input type="text" [(ngModel)]="courses.openning" name="openning" id="openning" >
-                              </td>
-                              <!-- <td><span>Mô tả</span></td>
-                                  <td>
-                                    <input type="text" [(ngModel)]="courses.description" name="description" id="description" >
-                                  </td> -->
-                              </div>
-                              </table>
-                            </div>
-                        </div>
-                        <div class="record-header">
-                          <div class="add">
-                            <table>
-                              <div  class="td_select">
-                              <!-- <td><span>Nội dung</span></td>
-                              <td><textarea name="" id="" cols="30" rows="2"></textarea></td>-->
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td></td>
-                              <td><button  type="submit">Cập nhật</button></td>
-                            </div>
-                          </table>
-                          </div>
-                      </div>
+                        </select>
+                        </td>
+                      <td><span>Chương trình học</span></td>
+                        <td>
+                          <!-- <input type="text" [(ngModel)]="courses.program" name="program" id="program" > -->
+                          <select  [(ngModel)]="courses.program" name="program" id="program" class="form-select" aria-label="Default select example" required>
+                            <option value="1" disabled >-- Chọn khóa học --</option>
+                            <option value="KINDER (4-6 tuổi)">KINDER (4-6 tuổi)</option>
+                            <option value="STARTER (6-8 tuổi)">STARTER (6-8 tuổi)</option>
+                            <option value="MOVER (8-10 tuổi)">MOVER (8-10 tuổi)</option>
+                        </select>
+                        </td>
+                      <td><span>Cấp độ</span></td>
+                      <td>
+                        <!-- <input type="text" [(ngModel)]="courses.level" name="level" id="level" > -->
+                        <select [(ngModel)]="courses.level" name="level" id="level" required>
+                          <option value="PRE (Sơ cấp)">PRE (Sơ cấp)</option>
+                          <option value="MID (Trung cấp)">MID (Trung cấp)</option>
+                          <option value="ADV (Nâng cao)">ADV (Nâng cao)</option>
+                          <option value="HON (Chuyên sâu)">HON (Chuyên sâu)</option>
+                        </select>
+                      </td>
+                      <td><span>Học phí</span></td>
+                      <td>
+                        <input type="text" [(ngModel)]="courses.price" name="price" id="price" required>
+                      </td>
+
+                      </tr>
+
+                      <tr >
+
+                        <td><span>Lịch học</span></td>
+                        <td>
+                          <!-- <input type="text" [(ngModel)]="courses.schedule" name="schedule" id="schedule"  required > -->
+                          <select [(ngModel)]="courses.schedule" name="schedule" id="schedule" required>
+                            <option value="7h (Thứ 3-5-7)">7h (Thứ 3-5-7)</option>
+                            <option value="9h (Thứ 3-5-7)">9h (Thứ 3-5-7)</option>
+                            <option value="13h (Thứ 3-5-7)">13h (Thứ 3-5-7)</option>
+                            <option value="15h (Thứ 3-5-7)">15h (Thứ 3-5-7)</option>
+                            <option value="18h (Thứ 3-5-7)">18h (Thứ 3-5-7)</option>
+                            <option value="20h (Thứ 3-5-7)">20h (Thứ 3-5-7)</option>
+                            <option value="7h (Thứ 2-4-6)">7h (Thứ 2-4-6)</option>
+                            <option value="9h (Thứ 2-4-6)">9h (Thứ 2-4-6)</option>
+                            <option value="13h (Thứ 2-4-6)">13h (Thứ 2-4-6)</option>
+                            <option value="15h (Thứ 2-4-6)">15h (Thứ 2-4-6)</option>
+                            <option value="18h (Thứ 2-4-6)">18h (Thứ 2-4-6)</option>
+                            <option value="20h (Thứ 2-4-6)">20h (Thứ 2-4-6)</option>
+                          </select>
+                        </td>
+
+                        <td><span>Ngày khai giảng dự kiến</span></td>
+                        <td>
+                          <input type="datetime-local" [(ngModel)]="courses.openning" name="openning" id="openning" required>
+                        </td>
+                        <td><span>Thời lượng khóa</span></td>
+                            <td>
+                              <select [(ngModel)]="courses.time" name="time" id="time" required>
+                                <option value="36">36 buổi</option>
+                                <option value="48">48 buổi</option>
+                                <option value="60">60 buổi</option>
+                              </select>
+                            </td>
+
+                        <td></td>
+                      <td><button  type="submit">Cập nhật</button></td>
+                      </tr>
+                  </div>
+                  </table>
+                </div>
+              </div>
 
             </form>
 
