--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -64,7 +64,7 @@
                               </td>
                               <td>
                                   <div class="actions">
-                                    <button (click)="updateTimetable(timetable.id)" class="btn" type="submit"><span class="las la-edit"></span></button>
+                                    <!-- <button (click)="updateTimetable(timetable.id)" class="btn" type="submit"><span class="las la-edit"></span></button> -->
                                     <button (click)="onDeleteTimetable(timetable.id)" class="btn" type="submit"><span class="las la-trash-alt"></span></button>
                                   </div>
                               </td>
