--- a/src/app/pages/timetable-salary/timetable-salary.component.html
+++ b/src/app/pages/timetable-salary/timetable-salary.component.html
@@ -18,8 +18,8 @@
               <td>
                 <!-- <div *ngIf="timetables.status == 1">
                   Đã thanh toán
-                </div> -->
-                <!-- <div *ngIf="timetables.status == 0"> -->
+                </div>
+                <div *ngIf="timetables.status == 0"> -->
                   <a (click)="getPaymentService(salary, timetableId)">Thanh toán ngay!</a>
                 <!-- </div> -->
                 <!-- <a (click)="getPaymentService(salary, timetableId)">Thanh toán ngay!</a> -->
