--- a/src/app/page_users/basic-schedule/basic-schedule.component.html
+++ b/src/app/page_users/basic-schedule/basic-schedule.component.html
@@ -60,11 +60,11 @@
 
           <div class="row" data-aos="zoom-in" data-aos-delay="100">
             <div class="records table-responsive">
-              <div class="record-header">
+              <!-- <div class="record-header">
                   <div class="browse">
                      <input type="search" placeholder="Search" class="record-search">
                   </div>
-              </div>
+              </div> -->
             <div>
               <table width="100%" >
                 <thead >
