--- a/src/app/pages/update-ielts-english/update-ielts-english.component.html
+++ b/src/app/pages/update-ielts-english/update-ielts-english.component.html
@@ -84,7 +84,7 @@
                                             </select>
                                           </td>
                                           <td></td>
-                                      <td><button  type="submit">Thêm</button></td>
+                                      <td><button  type="submit">Cập nhật</button></td>
                                     </tr>
                                 </div>
                                 </table>
